# idealos_schemas

./: .gitignore  LICENSE  README.md  package.json  schema_compiler.js
js/: debug.js  general.js  graphics.js  input.js  keyboard_map.js  keyboard_map.json  menus.js  resources.js  windows.js
rust/idealos_schemas/: Cargo.toml
rust/idealos_schemas/src/: debug.rs  general.rs  graphics.rs  input.rs  lib.rs  main.rs  menus.rs  resources.rs  windows.rs
src/: debug.txt  general.txt  graphics.txt  input.txt  keyboard.js  menus.txt  resources.txt  windows.txt
