[package]
name = "idealos_schemas"
version = "0.1.1"
authors = ["josh <joshua@marinacci.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = { version="1.0.125", features = ["derive"] }
